export const snapshot = {};

snapshot[`Instructions > Generate ADD Instruction > should generate an ADD Instruction if the field is an array of nodes, the field nodes don't exist and no instructions are specified on the field definition 1`] = `
[
  {
    definition: {
      body: {
        kind: "Block",
        statements: [
        ],
      },
      kind: "FunctionDeclaration",
      name: "hello",
      parameters: [
      ],
    },
    field: "statements",
    path: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > Generate ADD Instruction > should generate an ADD Instruction if the field is an array of nodes, the field nodes don't exist and instructions are specified on the field definition 1`] = `
[
  {
    definition: {
      body: {
        kind: "Block",
        statements: [
        ],
      },
      kind: "FunctionDeclaration",
      name: "hello",
      parameters: [
      ],
    },
    field: "statements",
    path: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > Generate ADD Instruction > should generate an ADD Instruction if the field is an array of nodes, the field nodes exist and no instructions are specified on the field definition 1`] = `
[
  {
    definition: {
      body: {
        kind: "Block",
        statements: [
        ],
      },
      kind: "FunctionDeclaration",
      name: "hello",
      parameters: [
      ],
    },
    field: "statements",
    path: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > Generate ADD Instruction > should generate an ADD Instruction if the field is an array of nodes and the field node is not found using the defined instruction ID 1`] = `
[
  {
    definition: {
      body: {
        kind: "Block",
        statements: [
        ],
      },
      kind: "FunctionDeclaration",
      name: {
        kind: "Identifier",
        text: "hello",
      },
      parameters: [
      ],
    },
    field: "statements",
    path: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > Generate ADD Instruction > should generate an ADD Instruction if the field is an array of nodes and the field is a nested definition 1`] = `
[
  {
    definition: {
      kind: "ExportKeyword",
    },
    field: "modifiers",
    path: "statements[0]",
    type: "ADD",
  },
  {
    definition: {
      kind: "AsyncKeyword",
    },
    field: "modifiers",
    path: "statements[0]",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > Generate ADD Instruction > should not generate an ADD Instruction if the field is an array of nodes and the field node is found using the defined instruction ID 1`] = `
[
]
`;

snapshot[`Instructions > Process ADD Instruction > should process an ADD Instruction if the field is an array of nodes, the field nodes don't exist and no instructions are specified on the field definition 1`] = `"function hello() { }"`;

snapshot[`Instructions > Process ADD Instruction > should process an ADD Instruction if the field is an array of nodes and the field is a nested definition 1`] = `"export default async function hello() { }"`;
